FDT-41842 : Fix button alignment issues on rule editing drawer (#127)
* fix: button alignment issue

* fix: minor comment

--- a/src/global.less
+++ b/src/global.less
@@ -17,6 +17,12 @@ body,
   left: unset;
 }
 
+// To align the delete buttton on rule editing drawer
+// Used global css as rjsf (Ant Design) doesn't allow form editing
+.array-item-remove {
+  margin-top: 40px
+}
+
 canvas {
   display: block;
 }
